Valores por columna identificados

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "88126357-cbe2-4371-8c63-b87045871048",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "05c9fc69-34d8-4208-99a6-8a6c011e8f4d",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,8 +641,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "43052ee8-195b-47e0-a188-d8348593bcce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Eliminar columnas que no se utilizaran\n",
+    "df = df.drop(columns = ['latitud', 'longitud', 'geopoint'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "72dfd453-9530-41b6-bbd0-dc1cf36fa5fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['MILPA ALTA', 'TLAHUAC', 'VENUSTIANO CARRANZA', 'IZTAPALAPA',\n",
+       "       'MIGUEL HIDALGO', 'MAGDALENA CONTRERAS', 'CUAJIMALPA',\n",
+       "       'CUAUHTEMOC', 'BENITO JUAREZ', 'ALVARO OBREGON',\n",
+       "       'GUSTAVO A. MADERO', 'IZTACALCO', 'AZCAPOTZALCO', 'COYOACAN',\n",
+       "       'TLALPAN', 'XOCHIMILCO'], dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Valores por columna\n",
+    "df['delegacion_inicio'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ed9efca2-428e-4a71-90d8-12b6d202a9be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['MILPA ALTA', 'TLAHUAC', 'VENUSTIANO CARRANZA', 'IZTAPALAPA',\n",
+       "       'MIGUEL HIDALGO', 'ALVARO OBREGON', 'CUAJIMALPA', 'CUAUHTEMOC',\n",
+       "       'BENITO JUAREZ', 'GUSTAVO A. MADERO', 'IZTACALCO', 'AZCAPOTZALCO',\n",
+       "       'COYOACAN', 'TLALPAN', 'XOCHIMILCO', 'MAGDALENA CONTRERAS'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['delegacion_cierre'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "95808df4-2d77-4698-b689-1a8aa2052b46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['accidente-choque sin lesionados',\n",
+       "       'accidente-choque con lesionados', 'lesionado-atropellado',\n",
+       "       'accidente-motociclista', 'accidente-volcadura',\n",
+       "       'accidente-persona atrapada / desbarrancada',\n",
+       "       'accidente-vehiculo desbarrancado',\n",
+       "       'accidente-choque con prensados', 'accidente-otros',\n",
+       "       'cadáver-atropellado', 'cadáver-accidente automovilístico',\n",
+       "       'accidente-vehiculo atrapado', 'accidente-ferroviario',\n",
+       "       'detención ciudadana-atropellado',\n",
+       "       'detención ciudadana-accidente automovilístico',\n",
+       "       'sismo-choque sin lesionados', 'sismo-persona atropellada',\n",
+       "       'sismo-choque con lesionados', 'sismo-choque con prensados',\n",
+       "       'accidente-ciclista', 'accidente-vehículo atrapado-varado',\n",
+       "       'accidente-monopatín',\n",
+       "       'Detención ciudadana-accidente automovilístico'], dtype=object)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['incidente_c4'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "26b6540c-7805-49a8-92cd-8b8a48f7505a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['EMERGENCIA', 'URGENCIAS MEDICAS', 'FALSA ALARMA', 'DELITO'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['clas_con_f_alarma'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d20da22b-a762-4d46-8b79-63186b12f83b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['LLAMADA DEL 911', 'BOTÓN DE AUXILIO', 'RADIO', 'REDES',\n",
+       "       'LLAMADA APP911', 'CÁMARA', 'ZELLO'], dtype=object)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['tipo_entrada'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d76efb57-32aa-4bc8-a697-ce9e344c4d20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['(D) El incidente reportado se registró en dos o más ocasiones procediendo a mantener un único reporte (afirmativo, informativo, negativo o falso) como el identificador para el incidente',\n",
+       "       '(N) La unidad de atención a emergencias fue despachada, llegó al lugar de los hechos, pero en el sitio del evento nadie solicitó el apoyo de la unidad',\n",
+       "       '(A) La unidad de atención a emergencias fue despachada, llegó al lugar de los hechos y confirmó la emergencia reportada',\n",
+       "       '(F) El operador/a o despachador/a identifican, antes de dar respuesta a la emergencia, que ésta es falsa. O al ser despachada una unidad de atención a emergencias en el lugar de los hechos se percatan que el incidente no corresponde al reportado inicialmente',\n",
+       "       '(I) El incidente reportado es afirmativo y se añade información adicional al evento'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['codigo_cierre'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0ef1c110-3983-495a-a26c-784d8d021ab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  7,  8,  9, 10, 11, 12,  1,  2,  5,  3,  4])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['mes'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "738f392e-22a3-4b84-ac20-d0bcc9cef31a",
    "metadata": {},
    "outputs": [],
    "source": []
